--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -41,9 +41,9 @@ en:
         follow: 'First post only'
         watch: 'All posts and replies'
       style:
-        long: 'Long'
-        short_replies: 'Short replies'
-        short: 'Short'
+        long: 'Full'
+        medium: 'Compact'
+        short: 'Minimal'
       rule_table:
         filter: "Filter"
         style: "Style"
@@ -143,11 +143,17 @@ en:
             url:
               title: "URL"
               help: "URL for webhook"
+            username:
+              title: "Username"
+              help: "Displayed username of bot posts"
             icon_url:
               title: "Icon URL"
               help: "Optional icon for posts"
             excerpt_length:
-              title: "Excerpt length"
+              title: "Excerpt length for long posts"
+              help: "Maximum length of posts"
+            compact_excerpt_length:
+              title: "Excerpt length for smaller posts"
               help: "Maximum length of posts"
           param:
             webhook:
@@ -159,6 +165,7 @@ en:
           errors:
             webhook_not_found: "Specified webhook has not been defined"
             channel_not_found: "The specified channel does not exist on Mattermost"
+            style_not_found: "Specified style does not exist"
 
         #######################################
         ############ MATRIX STRINGS ###########
